# wemkit

./: .gitignore  Cargo.toml  README.md  rust-toolchain.toml
.github/workflows/: ci.yml  release.yml
crates/wemkit/: Cargo.toml
crates/wemkit-cli/: Cargo.toml
crates/wemkit-cli/src/: main.rs
crates/wemkit/src/: audio.rs  decode.rs  encode.rs  lib.rs
